fixed sigup form styles on mobile version

--- a/app-template-project/src/components/signup/signup.component.css
+++ b/app-template-project/src/components/signup/signup.component.css
@@ -1,10 +1,9 @@
 .signup-container {
-    width: 300px;
+    max-width: 300px;
     padding: 2rem;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
-
     position: absolute;
     top: 50%;
     left: 50%;
@@ -42,3 +41,19 @@
     background-color: #0056b3;
   }
   
+  @media (max-width: 768px) {
+    .signup-container {
+        width: 90%; 
+        padding: 1.5rem;
+        margin-top: 6rem;
+    }
+
+    input, button {
+        padding: 0.6rem; 
+    }
+
+    h2 {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+}
